added postcode logo to footer.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
 		    </ul>
 		  </nav>
 		  <div class="footerLogo"><a href="http://www.cityvoiceapp.com/"><img src="/assets/CityVoice_footer.png" /></a></div>
-		  <div class="footerLogo"><a href="http://codeforamerica.org/"><img src="/assets/cfa_logo_black.png" /></a></div>
+		  <div class="footerLogo"><a href="http://postcode.io/"><img src="/assets/postcode_logo.png" /></a></div>
                   <div class="footerLogo"><a href="http://southbendin.gov/"><img src="/assets/southbendlogo.png" /><strong> City of South Bend</strong></a></div>
 		</footer>
 	</body>
