--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -10,6 +10,7 @@
     <div class="logos small-12 medium-pull-3 medium-9 columns">
       <%= link_to 'CityVoice', 'http://cityvoiceapp.com', class: 'cityvoice' %>
       <%= link_to 'Code for America', 'http://codeforamerica.org', class: 'codeforamerica' %>
+      <%= link_to 'PostCode', 'http://postcode.io', class: 'postcode' %>
       <%= link_to 'City of South Bend', 'http://southbendin.gov', class: 'southbend' %>
     </div>
   </div>
