--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -12,7 +12,7 @@
         <li class="has-form">
           <div class="row collapse">
             <div class="small-12 columns city-voice-typeahead">
-              <input type="text" placeholder="Enter Address">
+              <input type="text" placeholder="Enter Zip Code">
             </div>
           </div>
         </li>
