Display the phone number on the homepage with a big honking tel link.

--- a/app/assets/stylesheets/cityvoice/info_block.css.scss
+++ b/app/assets/stylesheets/cityvoice/info_block.css.scss
@@ -15,6 +15,11 @@
 
     background: white;
     padding: rem-calc(10) rem-calc(13);
+
+    .call {
+      font-size: rem-calc(25);
+      font-weight: 700;
+    }
   }
 
   *:last-child {
