--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -39,16 +39,20 @@
 
 <script>
   document.addEventListener('DOMContentLoaded', function(){
-    var locationGeoJson = <%= render(partial: 'locations/feature_collection', locals: {locations: Location.all}).html_safe %>;
-    var locations = new Cityvoice.Collections.Locations();
+   var locationGeoJson = <%= render(partial: 'locations/feature_collection', locals: {locations: Location.all}).html_safe %>;
 
-    locations.reset(locations.parse(locationGeoJson));
+   map = L.map('cityvoice-map', {
+     center: [41.6841303466642, -86.28305912017822],
+     zoom: 14
+   }); 
+   map.attributionControl.addAttribution('<%= Leaflet.attribution.html_safe %>');     
 
-    new Cityvoice.Views.Map({
-      collection: locations,
-      tileLayerUrl: "<%= Leaflet.tile_layer %>",
-      attributionText: '<%= Leaflet.attribution.html_safe %>',
-      maxZoom: "<%= Leaflet.max_zoom %>"
-    }).render();
+   L.tileLayer('<%= Leaflet.tile_layer %>').addTo(map);
+
+   L.geoJson(locationGeoJson, {
+     onEachFeature: function (feature, layer) {
+       layer.bindPopup(['<a href="', feature.properties.url, '">', feature.properties.name, '</a>'].join(""));
+     }
+   }).addTo(map);
   });
 </script>
