Add an export button to the activity page.

--- a/app/views/numerical_answers/index.html.erb
+++ b/app/views/numerical_answers/index.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
-  <div class="small-12 columns">
-    <h1>Activity</h1>
+  <div class="small-12 columns clearfix">
+    <h1 class="left">Activity</h1>
+    <%= link_to 'Export', numerical_answers_path(format: 'csv'), class: 'button right' %>
   </div>
 </div>
 
