Show all of the questions on the activity page and fix the vote result bar scaling issues.

--- a/app/views/locations/_voice_message.html.erb
+++ b/app/views/locations/_voice_message.html.erb
@@ -1,5 +1,6 @@
 <div class="city-voice-message">
   <h6>
+    <small>question:</small><%= answer.question.short_name.titleize %>
     <small>date:</small> <%= answer.created_at.to_s(:year_month_date) %>
     <% if answer.call.consented_to_callback %>
       <small>from:</small> <%= answer.obscured_phone_number %>
