--- a/app/views/numerical_answers/_vote.html.erb
+++ b/app/views/numerical_answers/_vote.html.erb
@@ -1,14 +1,14 @@
 <tr>
-  <td rowspan="2"><%= votes.fetch(:total, 0) %></td>
   <td rowspan="2"><%= link_to(location.name, location) %></td>
+  <td rowspan="2"><%= question.question_text %></td>
   <td>Yes</td>
   <td>
-    <%= render partial: 'numerical_answers/vote_meter', locals: { total: votes.fetch(:total, 0), number: votes.fetch(:repair, 0) } %>
+    <%= render partial: 'numerical_answers/vote_meter', locals: { number: question.response_counts[1], percentage: question.response_percentages[1] } %>
   </td>
 </tr>
 <tr>
   <td>No</td>
   <td>
-    <%= render partial: 'numerical_answers/vote_meter', locals: { total: votes.fetch(:total, 0), number: votes.fetch(:remove, 0) } %>
+    <%= render partial: 'numerical_answers/vote_meter', locals: { number: question.response_counts[2], percentage: question.response_percentages[2] } %>
   </td>
 </tr>
