--- a/app/views/numerical_answers/_vote_meter.html.erb
+++ b/app/views/numerical_answers/_vote_meter.html.erb
@@ -1,3 +1,3 @@
 <div class="city-voice-vote-meter progress">
-  <span class="meter" style="width: <%= percentage || 0 %>%"><%= number || 0%></span>
+  <span class="meter" style="width: <%= number[0] || 0 %>%"><%= number[1] || 0%></span>
 </div>
