--- a/app/views/numerical_answers/index.html.erb
+++ b/app/views/numerical_answers/index.html.erb
@@ -10,17 +10,14 @@
     <table style="width: 100%">
       <thead>
         <tr>
-          <th width="150">Address</th>
-          <th width="200">Question</th>
-          <th width="100">Response</th>
-          <th>Votes</th>
+          <th width="100">Address</th>
+          <th width="150">Question</th>
+          <th width="200">Response</th>
         </tr>
       </thead>
       <tbody>
         <% @locations.each do |location| %>
-          <% Question.numerical.each do |question| %>
-            <%= render partial: 'numerical_answers/vote', locals: {location: location, question: question} %>
-          <% end %>
+            <%= render partial: 'numerical_answers/vote', locals: {location: location} %>
         <% end %>
       </tbody>
     </table>
