--- a/app/views/numerical_answers/index.html.erb
+++ b/app/views/numerical_answers/index.html.erb
@@ -10,9 +10,10 @@
     <table style="width: 100%">
       <thead>
         <tr>
-          <th width="100">Address</th>
-          <th width="150">Question</th>
-          <th width="200">Response</th>
+          <th width="150">Address</th>
+          <th width="200">Question</th>
+          <th width="100">Response</th>
+          <th>Votes</th>
         </tr>
       </thead>
       <tbody>
